--- a/public/estilos/preset.css
+++ b/public/estilos/preset.css
@@ -13,11 +13,13 @@ body {
   bottom: 40px;
   color: white;
   background-color: #444;
-  font-size: 35px;
+  font-size: 20px;
+  border: 1px solid #aaa;
   border-radius: 20px;
-  width: 150px;
+  width: 100px;
   &:hover {
     cursor: pointer;
+    background-color: #333;
   }
 }
 
@@ -25,6 +27,7 @@ body {
   background-color: hsl(0, 0%, 0%, 0.5);
   color: white;
   padding: 20px;
+  border: 3px solid #aaa;
   border-radius: 25px;
   margin-top: 10px;
   font-size: 32px;
@@ -72,7 +75,8 @@ body {
   justify-content: center;
   font-size: 35px;
   margin: 5px;
-  border: 4px solid rgb(70, 68, 68);
+  border: 3px solid #aaa;
+
   border-radius: 25px;
   background-color: hsl(0, 0%, 0%, 0.5);
   color: orangered;
