--- a/public/estilos/style.css
+++ b/public/estilos/style.css
@@ -15,13 +15,14 @@ body {
   position: absolute;
   top: 10px;
   color: white;
-  border: 0em;
+  border: 1px solid #aaa;
   background-color: #535252;
-  font-size: 35px;
+  font-size: 25px;
   border-radius: 20px;
-  width: 150px;
+  width: 200px;
   &:hover {
     cursor: pointer;
+    background-color: #333;
   }
 }
 
@@ -31,13 +32,14 @@ body {
   position: absolute;
   top: 90px;
   color: white;
-  border: 0em;
+  border: 1px solid #aaa;
   background-color: #535252;
-  font-size: 35px;
+  font-size: 25px;
   border-radius: 20px;
-  width: 350px;
+  width: 250px;
   &:hover {
     cursor: pointer;
+    background-color: #333;
   }
 }
 
@@ -87,8 +89,12 @@ h1 #temperature {
 }
 
 @media (max-width: 1390px) {
+  body {
+    font-size: 1.5em;
+  }
+
   #temperature {
-    font-size: 1.1em;
+    font-size: 1.3em;
   }
 
   #reloj {
@@ -97,8 +103,12 @@ h1 #temperature {
 }
 
 @media (max-width: 992px) {
+  body {
+    font-size: 1.3em;
+  }
+
   #temperature {
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 
   .titulo {
@@ -112,7 +122,7 @@ h1 #temperature {
 
 @media (max-width: 768px) {
   body {
-    font-size: 40px;
+    font-size: 1.2em;
   }
 
   .titulo {
@@ -133,7 +143,7 @@ h1 #temperature {
 
 @media (max-width: 576px) {
   body {
-    font-size: 26px;
+    font-size: 1.1em;
   }
 
   .titulo {
