--- a/public/estilos/style.css
+++ b/public/estilos/style.css
@@ -8,6 +8,7 @@ body {
   background: url("/imagenes/fondo.jpg") no-repeat center center cover;
   color: orangered;
   height: 100%;
+  
   user-select: none;
 }
 
@@ -15,7 +16,7 @@ body {
   position: absolute;
   top: 10px;
   color: white;
-  border: 1px solid #aaa;
+  border: 1px solid #fff;
   background-color: transparent;
   font-size: 25px;
   border-radius: 20px;
@@ -57,10 +58,7 @@ body {
   font-size: 1em;
   font-weight: 600;
   text-align: center;
-  animation-name: parpadeo;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+  
 }
 
 h1 #temperature {
@@ -77,17 +75,6 @@ h1 #temperature {
   box-shadow: 0px 0px 25px #fff;
 }
 
-@keyframes parpadeo {
-  100% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  0% {
-    opacity: 0;
-  }
-}
 
 @media (max-width: 1390px) {
   body {
