--- a/public/estilos/weather.css
+++ b/public/estilos/weather.css
@@ -35,7 +35,7 @@ button {
   flex-direction: column;
   justify-content: space-evenly;
   align-content: center;
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -50,7 +50,8 @@ button {
   font-size: 1.3em;
   border: 2px solid white;
   border-radius: 25px;
-  box-shadow: 0 0 30px white;
+  box-shadow: 0 0 30px #06b0f3;
+  text-shadow: 2px 2px  rgb(26, 121, 245);
 }
 
 .parrafos {
@@ -60,7 +61,7 @@ button {
   margin-right: auto;
   margin-top: 30px;
   border-radius: 15px;
-  box-shadow: 0 0 25px white;
+  box-shadow: 0 0 25px #06b0f3;
 }
 
 #internet,
@@ -80,10 +81,6 @@ button {
 }
 
 @media (max-width: 768px) {
-  h1,
-  .parrafos {
-    font-size: 0.9em;
-  }
 
   .parrafos {
     font-size: 0.5em;
