modified:   public/estilos/style.css 	modified:   public/index.html 	modified:   public/main.js

--- a/public/estilos/style.css
+++ b/public/estilos/style.css
@@ -11,7 +11,7 @@ body {
   user-select: none;
 }
 
-#boton-preset {
+#btn-preset {
   position: absolute;
   top: 10px;
   color: white;
@@ -26,7 +26,7 @@ body {
   }
 }
 
-#reconnect-btn {
+#btn-reconnect {
   position: absolute;
   top: 90px;
   color: white;
